# ai-portfolio

./: .gitignore  ColumnNameConsts.py  README.md  app.py  new_invest.sh  portfolio.py  pyproject.toml  run.sh
data/: test_transactions.csv
docs/: historical-price-feature-plan.md
src/: loss_tracker.py  new_invest.py  portfolio.py  portfolio_data.py  st_app.py
src/config/: ColumnNameConsts.py
src/database/: models.py  setup_database.py
src/mcp_server/: __init__.py  __main__.py  config.py  schemas.py  server.py
src/util/: gspread.py  historical_cache.py  new_invest.py  yfinance.py
static/: tables.js
templates/: table_view.html
tests/: test_portfolio.py
