[tool.poetry]
name = "ai-portfolio"
version = "0.1.0"
description = ""
authors = ["Somnath Banerjee <somnath.banerjee@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" },]

[tool.poetry.dependencies]
python = "^3.9.16"
gspread = "^6.0.1"
flask = "^3.0.2"
pandas = "^2.2.0"
yfinance = "^0.2.37"
pyarrow = "^15.0.0"
pytest = "^8.0.0"
python-dotenv = "^1.0.1"
streamlit = "^1.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
