[tool.poetry]
name = "ai-portfolio"
version = "0.1.0"
description = ""
authors = ["Somnath Banerjee <somnath.banerjee@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" },]

[tool.poetry.dependencies]
python = "^3.13.1"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
yfinance = "^0.2.58"
flask = "^3.1.0"
gspread = "^6.1.4"
streamlit = "^1.42.1"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
