[project]
name = "ai-portfolio"
version = "0.1.0"
description = ""
authors = [
    {name = "Somnath Banerjee", email = "somnath.banerjee@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "yfinance>=0.2.65",
    "flask>=3.1.0",
    "gspread>=6.2.1",
    "streamlit>=1.42.1",
    "pytest>=8.3.4",
]


[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
